fix image paths in week 6

--- a/_posts/2020-12-06-week-7.md
+++ b/_posts/2020-12-06-week-7.md
@@ -48,7 +48,7 @@ Like many database designs, this is subject to change, however we believe it is 
 Our UML/ER Diagram can be found below, which we created using [Lucidchart's free education package](https://www.lucidchart.com/pages/usecase/education):
 
 <p align="center">
-  <img src="/blog/week-7-image-1.png" width="100%" title="ER diagram" />
+  <img src="/blog/images/week-7-image-1.png" width="100%" title="ER diagram" />
 </p>
 
 As you can see, we have various tables and relations. Primary keys are underlined. Perhaps the less intuitive part is those table relating to `user_type`s. We decided to take this approach as we realised that each user type (e.g. clinician, department, hospital, health board, etc.) has different *metadata* associated to them (e.g. clinicians/departments have a corresponding department, but hospitals have no department, and health boards have no hospital!).
@@ -106,13 +106,13 @@ If you would like access to the website, please get in touch with us.
 This week we are finishing using pair programming as our main development strategy and so naturally need some way of allocating tasks individually. For our project we have both a Notion and Trello board which both provide ways of allocating tasks however as we are using GitHub for our code anyway, we decided that the best choice was for us to use GitHub's built in project management, in the form of Issues and Projects. This provides us an easy way to allocate tasks using issues, which include useful things like labels, comments, milestones and assignees etc. Example first issue: 
 
 <p align="center">
-  <img src="/blog/week-7-image-2.png" width="100%" title="Github issue" />
+  <img src="/blog/images/week-7-image-2.png" width="100%" title="Github issue" />
 </p>
 
 This way of managing our project also allows us to use PR's (pull requests) in our project, which we will link to each issue created. This means that every time we want to implement something new we have to create a new branch, meaning the main branch won't be broken by something new, and once we have finished implementing something new we can create a PR to request to merge to the main branch. For each PR we will request a code review from someone else which gives us another advantage of code being double checked twice, and the reviewer can suggest new changes before the reviewee can merge. Example first PR:
 
 <p align="center">
-  <img src="/blog/week-7-image-3.png" width="100%" title="Github PR" />
+  <img src="/blog/images/week-7-image-3.png" width="100%" title="Github PR" />
 </p>
 
 ## Backend development
@@ -141,10 +141,10 @@ This was a very necessary improvement for the user experience of our system as n
 
 
 <p align="center">
-  <img src="/blog/week-7-image-4.png" width="100%" title="Error pop up" />
+  <img src="/blog/images/week-7-image-4.png" width="100%" title="Error pop up" />
 </p>
 <p align="center">
-  <img src="/blog/week-7-image-5.png" width="100%" title="Error messages for unanswered questions" />
+  <img src="/blog/images/week-7-image-5.png" width="100%" title="Error messages for unanswered questions" />
 </p>
 
 ### **Statistics page**
