Reduce image widths; Fix Term 1 summary images

--- a/_posts/2020-12-20-week-9.5.md
+++ b/_posts/2020-12-20-week-9.5.md
@@ -17,7 +17,7 @@ At the moment, this data simply does not exist; staff have no method of determin
 
 The Health and Care standards are shown below [[from gov.wales](https://gov.wales/sites/default/files/publications/2019-05/health-and-care-standards-april-2015.pdf)]:
 
-<p align="center" width="100%"><img src="/blog/images/week-9.5-image-1.png" /></p>
+<p align="center"><img width="70%" src="/blog/images/week-9.5-image-1.png" /></p>
 
 ## MoSCoW Requirements
 
@@ -49,7 +49,7 @@ As this was just the beginning of our project it was imperative that we did not 
 
 These are excerpts from the final interviews/questionnaires we agreed on:
 
-<p align="center" width="100%"><img src="/blog/images/week-9.5-image-3.png" /></p>
+<p align="center"><img width="80%" src="/blog/images/week-9.5-image-3.png" /></p>
 
 ## Personas
 
@@ -57,13 +57,13 @@ After analysing and going over interview/questionnaire results we had a better i
 
 We had to focus on the most important details that would be relevant to how our system is built. We ended up with 3 very informative personas; an example of one follows:
 
-<p align="center" width="100%"><img src="/blog/images/week-9.5-image-4.png" /></p>
+<p align="center"><img width="80%" src="/blog/images/week-9.5-image-4.png" /></p>
 
 ## Scenarios
 
 Once we finalised our user personas we created scenarios to get a full understanding of the problem, our users’ pain points and goals. These acted as a great summary of the requirements we gathered, which we have referred to during development; an example of one follows:
 
-<p align="center" width="100%"><img src="/blog/images/week-9.5-image-5.png" /></p>
+<p align="center"><img width="80%" src="/blog/images/week-9.5-image-5.png" /></p>
 
 ## Sketches
 
@@ -71,7 +71,7 @@ After knowing our requirements clearly, we then sketched the first version of ou
 
 We used Miro as a tool to remotely collaborate on our design sketches. After making our sketch and getting feedback from our users, we discussed and iterated them to come up with these final sketches:
 
-<p align="center" width="100%"><img src="/blog/images/week-9.5-image-6.png" /></p>
+<p align="center"><img width="80%" src="/blog/images/week-9.5-image-6.png" /></p>
 
 ## Prototype
 
@@ -210,7 +210,7 @@ We then designed a database schema, which we've iterated on a few times over the
 
     More details can be found on our [Week 6 blog post](https://comp0016-team-20.github.io/blog/development/planning/2020/11/29/week-6.html).
 
-    ![Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/Capture_decran_2020-12-25_a_04.12.28.png](Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/Capture_decran_2020-12-25_a_04.12.28.png)
+    <p align="center" width="100%"><img src="/blog/images/week-9.5-image-11.png" /></p>
 
 - Self assessment page
 
@@ -222,7 +222,7 @@ We then designed a database schema, which we've iterated on a few times over the
 
     More details can be found on our [Week 6](https://comp0016-team-20.github.io/blog/development/planning/2020/11/29/week-6.html) and [Week 7](https://comp0016-team-20.github.io/blog/coding/planning/2020/12/06/week-7.html) blog posts.
 
-    ![Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/Capture_decran_2020-12-25_a_04.11.36.png](Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/Capture_decran_2020-12-25_a_04.11.36.png)
+    <p align="center" width="100%"><img src="/blog/images/week-9.5-image-12.png" /></p>
 
 - Statistics page
 
@@ -234,7 +234,7 @@ We then designed a database schema, which we've iterated on a few times over the
 
     You can find more details in our [Week 6](https://comp0016-team-20.github.io/blog/development/planning/2020/11/29/week-6.html), [Week 7](https://comp0016-team-20.github.io/blog/coding/planning/2020/12/06/week-7.html), and [Week 8](https://comp0016-team-20.github.io/blog/coding/planning/2020/12/13/week-8.html) blog posts.
 
-    ![Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/Capture_decran_2020-12-25_a_04.13.23.png](Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/Capture_decran_2020-12-25_a_04.13.23.png)
+    <p align="center" width="100%"><img src="/blog/images/week-9.5-image-13.png" /></p>
 
 - Manage URLs page
 
@@ -244,7 +244,7 @@ We then designed a database schema, which we've iterated on a few times over the
 
     You can read more details of the UI in our [Week 8 blog post](https://comp0016-team-20.github.io/blog/coding/planning/2020/12/13/week-8.html).
 
-    ![Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/WhatsApp_Image_2020-12-14_at_11.02.53.jpeg](Term%201%20Summary%200e6efd32e70d464598f2010fafa796a3/WhatsApp_Image_2020-12-14_at_11.02.53.jpeg)
+    <p align="center" width="100%"><img src="/blog/images/week-9.5-image-14.png" /></p>
 
 ## Backend
 
