Fix markdown issues

--- a/_posts/2020-12-20-week-9.5.md
+++ b/_posts/2020-12-20-week-9.5.md
@@ -5,7 +5,7 @@ date: 2020-12-20 23:59:39 +0000
 categories: summary
 ---
 
-# Summary of project
+## Summary of project
 
 This Term we discovered the project that we needed to work on: Care Quality Dashboard.
 
@@ -19,7 +19,7 @@ The Health and Care standards are shown below [[from gov.wales](https://gov.wale
 
 <p align="center"><img width="70%" src="/blog/images/week-9.5-image-1.png" /></p>
 
-## MoSCoW Requirements
+### MoSCoW Requirements
 
 Early on in the project, we scoped out our requirements and discussed with our client and users what would be needed from the project. Our Human Computer Interaction (HCI) research involved user interviews and questionnaires, which influenced our final requirements.
 
@@ -27,7 +27,7 @@ Our MoSCoW requirements can be found below:
 
 <p align="center" width="100%"><img src="/blog/images/week-9.5-image-2.png" /></p>
 
-# Human Computer Interaction
+## Human Computer Interaction
 
 The first big stage of our project was HCI - Human Computer Interaction. HCI is the design, implementation and evaluation of interactive computer systems focused on the users, as the system being built is for users and to help users. This was a great base for our project as we began with a user centred approach ensuring the system is actually effective and efficient for the user to use.
 
@@ -41,7 +41,7 @@ This was split into 2 sections, all detailed below:
 
     You can read more about these areas in our [Week 3 blog post](https://comp0016-team-20.github.io/blog/design/and/hci/2020/11/08/week-3.html).
 
-## Interviews/questionnaires
+### Interviews/questionnaires
 
 We began by taking a closer look at our project details and deciding what we would actually need to ask our users for our research to be useful and concise.
 
@@ -51,7 +51,7 @@ These are excerpts from the final interviews/questionnaires we agreed on:
 
 <p align="center"><img width="80%" src="/blog/images/week-9.5-image-3.png" /></p>
 
-## Personas
+### Personas
 
 After analysing and going over interview/questionnaire results we had a better idea of our users and what they want so we could move on to build personas for each of our main user groups: a clinician, department manager and head of Hospital/Health Trust.
 
@@ -59,13 +59,13 @@ We had to focus on the most important details that would be relevant to how our 
 
 <p align="center"><img width="80%" src="/blog/images/week-9.5-image-4.png" /></p>
 
-## Scenarios
+### Scenarios
 
 Once we finalised our user personas we created scenarios to get a full understanding of the problem, our users’ pain points and goals. These acted as a great summary of the requirements we gathered, which we have referred to during development; an example of one follows:
 
 <p align="center"><img width="80%" src="/blog/images/week-9.5-image-5.png" /></p>
 
-## Sketches
+### Sketches
 
 After knowing our requirements clearly, we then sketched the first version of our product on paper but we were struggling with the most optimized design for the dashboard.
 
@@ -73,13 +73,13 @@ We used Miro as a tool to remotely collaborate on our design sketches. After mak
 
 <p align="center"><img width="80%" src="/blog/images/week-9.5-image-6.png" /></p>
 
-## Prototype
+### Prototype
 
 Our sketches formed the basis of an interactive prototype we created using Figma. We then asked a user to interact with this via Zoom screen-share and the Figma Present functionality. We used this to evaluate our prototype and found possible improvements which we added to create a finalised prototype [which can be found here](https://www.figma.com/proto/fqTMF5zrOB0p1XFmWuGiNf/Revised-Prototype-2?node-id=2%3A2&scaling=min-zoom).
 
-# Research
+## Research
 
-## Stack, Frameworks, Libraries & Components
+### Stack, Frameworks, Libraries & Components
 
 Early on in the Term, we decided on using a JavaScript-based stack throughout the project.
 
@@ -122,7 +122,7 @@ Our final core stack, framework, and library choices are:
 
 Our production server is in the form of a [Linode](http://linode.com/) Virtual Private Server instance, which was kindly provided to us by our client.
 
-## Login System
+### Login System
 
 A large chunk of this Term consisted of research of various login options we can use in the system.
 
@@ -172,9 +172,9 @@ This provides a simple username-password authentication system where credentials
 
 If it turns out we can use an official NHS authentication method, we will be able to configure Keycloak to use the NHS system as an Identity Provider.
 
-# Development
+## Development
 
-## Project Management
+### Project Management
 
 Throughout the development phase of the project, we have utilised all of GitHub's handy project management features. An example of what our Issues page looks like is below:
 
@@ -190,7 +190,7 @@ We created a GitHub Project board to provide a Kanban-style board detailing our 
 
 Furthermore, we are using Pull Requests for all major code changes, so all our code is reviewed by at least one other team member!
 
-## Database
+### Database
 
 We started by creating an IPSO chart (collaborating remotely via Miro) near the beginning of the Term to help us think about our data storage requirements:
 
@@ -200,7 +200,7 @@ We then designed a database schema, which we've iterated on a few times over the
 
 <p align="center" width="100%"><img src="/blog/images/week-9.5-image-10.png" /></p>
 
-## Frontend
+### Frontend
 
 - Navigation bar
 
@@ -228,9 +228,9 @@ We then designed a database schema, which we've iterated on a few times over the
 
     This page consists of several custom-made components, such as a `Accordion`, `Filter`, and `LineChart` component.
 
-    We are also using the [Chart.js](https://www.chartjs.org/) open-source JavaScript charting library along with an open-source React wrapper `[react-chartjs-2](https://www.npmjs.com/package/react-chartjs-2)` to implement the line chart and a 'donut' graph to implement the average compliance circles.
+    We are also using the [Chart.js](https://www.chartjs.org/) open-source JavaScript charting library along with an open-source React wrapper [`react-chartjs-2`](https://www.npmjs.com/package/react-chartjs-2) to implement the line chart and a 'donut' graph to implement the average compliance circles.
 
-    We've also made use of the `[react-date-range](https://www.npmjs.com/package/react-date-range)` open-source library to implement the date picker/calendar that can be seen below.
+    We've also made use of the [`react-date-range`](https://www.npmjs.com/package/react-date-range) open-source library to implement the date picker/calendar that can be seen below.
 
     You can find more details in our [Week 6](https://comp0016-team-20.github.io/blog/development/planning/2020/11/29/week-6.html), [Week 7](https://comp0016-team-20.github.io/blog/coding/planning/2020/12/06/week-7.html), and [Week 8](https://comp0016-team-20.github.io/blog/coding/planning/2020/12/13/week-8.html) blog posts.
 
@@ -244,9 +244,9 @@ We then designed a database schema, which we've iterated on a few times over the
 
     You can read more details of the UI in our [Week 8 blog post](https://comp0016-team-20.github.io/blog/coding/planning/2020/12/13/week-8.html).
 
-    <p align="center" width="100%"><img src="/blog/images/week-9.5-image-14.png" /></p>
+    <p align="center" width="100%"><img src="/blog/images/week-9.5-image-14.jpeg" /></p>
 
-## Backend
+### Backend
 
 Our backend primarily consists of [Next.js API Routes](https://nextjs.org/docs/api-routes/introduction), which allow a straightforward solution to build a public-facing API built-in to our Next.js app.
 
@@ -275,7 +275,7 @@ This Term, we focussed on implementing the API routes to support the features im
 
 Going forward, we will be fleshing out the API to support all the required features of the frontend.
 
-## Continuous Deployment
+### Continuous Deployment
 
 As part of our DevOps practices, we have configured a Continuous Deployment workflow for the project. This involves the automatic deployment of our codebase from GitHub to our production (Linode) server.
 
