--- a/_posts/2020-12-27-week-10.md
+++ b/_posts/2020-12-27-week-10.md
@@ -21,7 +21,7 @@ To complete this, we worked primarily on the API backend this week:
 
 - Created 2 new PUT API endpoints to support join code generation: `/api/join_codes/department_manager/DEPARTMENT_ID` and `/api/join_codes/hospital/DEPARTMENT_ID`, to (re-)generate join codes for the respective department and user group, and return the new code
 
-    To do this, we decided to use the `[nanoid](https://github.com/ai/nanoid)` library, as it was a highly popular, lightweight, secure and URL-friendly unique string generator with all the features we required: custom length and custom alphabet.
+    To do this, we decided to use the [`nanoid`](https://github.com/ai/nanoid) library, as it was a highly popular, lightweight, secure and URL-friendly unique string generator with all the features we required: custom length and custom alphabet.
 
     We decided on a 9-character alphanumeric case-sensitive string as the join code: this would be complex enough to defend against brute force/enumeration attempts, and simple enough to allow users to type, if needed in future (although at the moment, the functionality works via simply visiting a URL containing the join code).
 
