Fix blog post 12 date & cleanup; Cleanup other posts

--- a/_posts/2020-11-08-week-3.md
+++ b/_posts/2020-11-08-week-3.md
@@ -2,10 +2,8 @@
 layout: post
 title: "Week 3: Sketching, Prototyping & Evaluation"
 date: 2020-11-08 17:12:39 +0000
-categories: design and hci
+categories: design hci
 ---
-
-# Week 3: Sketching, Prototyping & Evaluation
 
 This week, we concentrated on sketching, prototyping and evaluation of our product. In the previous week, we were able to gather our requirements from our users and hence complete our personas & scenarios.
 
@@ -13,7 +11,7 @@ We used an user centered iterative approach in order to make the best sketch and
 
 ## Sketching
 
-We started by sketching the first version of our product on paper but we were struggling with the most optimized design for the dashboard. We used Miro as a tool to sketch our design. 
+We started by sketching the first version of our product on paper but we were struggling with the most optimized design for the dashboard. We used Miro as a tool to sketch our design.
 
 The initial design had a **homepage**, **self-assessment page** (Likert scale questions/optional comment questions), **manage users/questions page** (for department heads), and a **statistics page** (to visualize and filter data for different groups depending on your position).Sketches 5 & 6 are **alternative designs** where we experimented with different homepage versions (e.g. with sidebar/extra educational content).
 
