--- a/_posts/2020-12-13-week-8.md
+++ b/_posts/2020-12-13-week-8.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Week 8: Development, Initial Login System & NHS Meeting"
 date: 2020-12-13 03:49:43 +0000
-categories: coding planning
+categories: development planning
 ---
 
 This week we have implemented a basic login system, continued to build the statistics page, and built an initial Manage URLs page. We also met with the NHS Identity team.
