--- a/_posts/2020-12-20-week-9.md
+++ b/_posts/2020-12-20-week-9.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Week 9: Further Development & Login System improvements"
 date: 2020-12-20 09:23:18 +0000
-categories: architecture coding
+categories: architecture development
 ---
 
 This week, we reached out to the NHS Wales contact we were provided with, rescheduled our meeting with Digital Health Ecosystem Wales, and worked on the development of the Statistics and Manage URLs page.
