--- a/_posts/2020-12-27-week-10.md
+++ b/_posts/2020-12-27-week-10.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Week 10: Further Development & User Registration/Onboarding"
 date: 2020-12-27 20:24:37 +0000
-categories: coding
+categories: development
 ---
 
 This week we committed to an initial user onboarding and registration process and started its implementation. We also continued with development of the Statistics Page.
