--- a/_posts/2021-01-03-week-11.md
+++ b/_posts/2021-01-03-week-11.md
@@ -2,14 +2,14 @@
 layout: post
 title: "Week 11: Further Development"
 date: 2021-01-03 02:22:23 +0000
-categories: coding
+categories: development
 ---
 
 This week we continued development mainly on the frontend of the platform.
 
 ## Development: Manage Questions Page
 
-This week we fully completed the implementation and wiring of our Manage Questions admin page. This page was fairly similar to the Manage URLs page however required additional functionality and some crucial tweaks. 
+This week we fully completed the implementation and wiring of our Manage Questions admin page. This page was fairly similar to the Manage URLs page however required additional functionality and some crucial tweaks.
 
 The first main difference was that for each question (i.e. row) when the edit button was pressed *all* the columns should be editable, not only the URL.
 
