--- a/_posts/2020-12-06-week-7.md
+++ b/_posts/2020-12-06-week-7.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Week 7: Architecture, Development, Continuous Deployment & Login Option"
 date: 2020-12-06 15:53:29 +0000
-categories: coding planning
+categories: development planning
 ---
 
 This week we continued to work on the development of the self-assessment tool, created an initial database schema, and set up continuous deployment of our project. We also performed more research on login system options.
@@ -82,7 +82,7 @@ We set up Continuous Deployment to the Linode server using GitHub Actions. After
 
     An example GitHub Action to run a command via SSH can be found [here](https://github.com/appleboy/ssh-action).
 
-Many more options were researched and considered. We decided on the final option listed above, with some tweaks. 
+Many more options were researched and considered. We decided on the final option listed above, with some tweaks.
 
 A challenge was deciding how and where to push our Docker images. There seemed to be three popular options: [Docker Hub](https://hub.docker.com/), or [GitHub Packages](https://github.com/features/packages), or [GitHub Container Registry](https://docs.github.com/en/free-pro-team@latest/packages/getting-started-with-github-container-registry/about-github-container-registry).
 
@@ -103,7 +103,7 @@ If you would like access to the website, please get in touch with us.
 
 ## Project managment
 
-This week we are finishing using pair programming as our main development strategy and so naturally need some way of allocating tasks individually. For our project we have both a Notion and Trello board which both provide ways of allocating tasks however as we are using GitHub for our code anyway, we decided that the best choice was for us to use GitHub's built in project management, in the form of Issues and Projects. This provides us an easy way to allocate tasks using issues, which include useful things like labels, comments, milestones and assignees etc. Example first issue: 
+This week we are finishing using pair programming as our main development strategy and so naturally need some way of allocating tasks individually. For our project we have both a Notion and Trello board which both provide ways of allocating tasks however as we are using GitHub for our code anyway, we decided that the best choice was for us to use GitHub's built in project management, in the form of Issues and Projects. This provides us an easy way to allocate tasks using issues, which include useful things like labels, comments, milestones and assignees etc. Example first issue:
 
 <p align="center">
   <img src="/blog/images/week-7-image-2.png" width="100%" title="Github issue" />
@@ -125,7 +125,7 @@ Once we decided on Prisma we built our database using a schema based on our UML/
 
 We are also happy to commit to PostgreSQL because using Prisma as our ORM meant many of the database-specific implementations were abstracted away, meaning if we needed to switch for any reason later down the line, we could easily do so.
 
-With our database built and ORM decided we could start building our first API endpoint. Just like with the front end, we decided to use pair programming (using visual studio's live share extension again) to create the first API endpoint so that all of us got a good understanding of how it actually works and it also brings the benefit of higher quality code due to all of us checking it as it is being written. 
+With our database built and ORM decided we could start building our first API endpoint. Just like with the front end, we decided to use pair programming (using visual studio's live share extension again) to create the first API endpoint so that all of us got a good understanding of how it actually works and it also brings the benefit of higher quality code due to all of us checking it as it is being written.
 
 We created the GET and POST endpoints for our `/api/responses` endpoint and then used it naively to test the functionality in the self assessment page using the `console.log()` functionality and [Postman](https://www.postman.com/). With a few tweaks to the API to make it work with Prisma's data relations that were causing errors, we ended up testing the API endpoint successfully. Knowing how Prisma relational queries now work, we hope to create the remaining endpoints needed in the coming weeks.
 
@@ -149,9 +149,9 @@ This was a very necessary improvement for the user experience of our system as n
 
 ### **Statistics page**
 
-This week we have also planned and started to build the statistics page with all the features we require for our system. 
+This week we have also planned and started to build the statistics page with all the features we require for our system.
 
-We have decided we will need to create are our own `<GraphWrapper/>` component that will consist of filters, legend and a graph. This component will take data from the API based on the what the filters specify and then display this using the graph component from Chart.js mentioned in the earlier Week 6 post. 
+We have decided we will need to create are our own `<GraphWrapper/>` component that will consist of filters, legend and a graph. This component will take data from the API based on the what the filters specify and then display this using the graph component from Chart.js mentioned in the earlier Week 6 post.
 
 Lastly in our prototype we had 'circles' summarising average compliance to-date within a collapsible block. To achieve this we looked at the different components available to us through Material UI and Chart.js. We decided that the best option for our system would be using the doughnut type chart from Chart.js for the 'circles' and the `<Accordion/>` component from Material UI to make them collapsible.
 
