Fix missing line

--- a/_posts/2021-03-07-week-20.md
+++ b/_posts/2021-03-07-week-20.md
@@ -17,7 +17,7 @@ This week, we focused on restyling the landing page of our report website as wel
 
 Having completed our frontend unit tests and backend API integration tests, we set up our end-to-end testing framework this week. These aim to test the entire system as a whole from a user's perspective, by programmatically navigating to the site, interacting with it, and asserting that the UI is updated and functions correctly at all times.
 
-We are using Puppeteer, a popular
+We are using [Puppeteer](https://github.com/puppeteer/puppeteer), a popular Node.js API to programmatically control Chrome, alongside Jest for these tests.
 
 We tried to use [jest-puppeteer](https://github.com/smooth-code/jest-puppeteer) but found that the built in option to start a local web-server was limited to starting it once at the beginning for all the tests, but we needed to restart it before every test suite. We ended up doing this by running the `npm run start` command via Node in our own Test Environment and maintaining a reference to this to kill in the teardown method. However, we found that setting our own global variables (the reference to the server process handle) was incompatible with the way jest-puppeteer injects its own test environment, so ended up configuring the Puppeteer `Browser` and `Page` instances ourselves and removing the `jest-puppeteer` dependency.
 
