--- a/_posts/2021-03-28-week-23.md
+++ b/_posts/2021-03-28-week-23.md
@@ -17,20 +17,21 @@ A short 2-page case study can be found here, and our draft research paper is ava
 
 Our team that worked on this project:
 
-<p align="center"><img width="100%" src="/blog/images/week-23-image-1.png" /></p>
+<div style="display:flex">
+<p style='flex-grow: 1; flex-basis: 0;'>
+<img src="/blog/images/week-23-image-1.png" />
+<a href="https://www.sjain.dev/" target='_blank'>Shubham Jain</a>
+</p>
 
-[Shubham Jain](https://www.sjain.dev/)
+<p style='flex-grow: 1; flex-basis: 0;'>
+<img src="/blog/images/week-23-image-2.png" />
+<a href='https://www.linkedin.com/in/mateusz-zielinski-ucl/' target='_blank'>Mateusz Zielinski</a>
+</p>
 
-Best,
-
-Team 20
-
-<p align="center"><img width="100%" src="/blog/images/week-23-image-2.png" /></p>
-
-[Mateusz Zielinski](https://www.linkedin.com/in/mateusz-zielinski-ucl/)
-
-<p align="center"><img width="100%" src="/blog/images/week-23-image-3.png" /></p>
-
-[Matthew Schulz](https://matthieuschulz.me/)
+<p style='flex-grow: 1; flex-basis: 0;'>
+<img src="/blog/images/week-23-image-3.png" />
+<a href='https://matthieuschulz.me/' target='_blank'>Matthew Schulz</a>
+</p>
+</div>
 
 Please feel free to get in touch with us if you are working on something similar, or taking this project forward.
